# mailing_list

./: .gitignore  README.md  pyproject.toml
blog/: forms.py  models.py  urls.py  views.py
blog/migrations/: 0001_initial.py  0002_blog_owner.py
blog/templates/blog/: blog_confirm_delete.html  blog_detail.html  blog_form.html  blog_list.html
config/: settings.py  urls.py
mailing/: admin.py  apps.py  forms.py  models.py  tasks.py  urls.py  views.py
mailing/management/commands/: send_mailings.py
mailing/migrations/: 0001_initial.py  0002_alter_mailing_status.py  0002_client_owner_mailing_owner_message_owner.py  0003_alter_client_options_alter_mailing_options.py  0004_alter_mailing_options_mailing_end_datetime_and_more.py  0005_alter_mailing_status.py
static/css/: styles.css
templates/: base.html
templates/attempt/: attempt_list.html
templates/clients/: client_confirm_delete.html  client_create.html  client_form.html  client_list.html
templates/includes/: head.html  inc_menu.html  style.html  style_attempt_center.html  style_delete.html
templates/mailings/: mailing_confirm_delete.html  mailing_deactivate.html  mailing_form.html  mailing_list.html
templates/message/: message_confirm_delete.html  message_form.html  message_list.html
users/: admin.py  forms.py  models.py  urls.py  views.py
users/management/commands/: csu.py
users/migrations/: 0001_initial.py  0002_alter_users_options.py
users/templates/: base_login.html  password_reset.html  profile_edit.html
users/templates/users/: login.html  user_form.html  user_list.html
