[tool.poetry]
name = "mailing"
version = "0.1.0"
description = ""
authors = ["RViktorV <rgavih@yandex.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11,<3.13"
psycopg2 = { version = "2.9.9", allow-prereleases = true, extras = ["--no-binary psycopg2"] }
django = "4.2.2"
pytz = "^2024.1"
apscheduler = "^3.10.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
